--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -54,7 +54,7 @@
           >Analyze Video</a
         >
         {% endif %}
-        {% if candidate.video_analysis_status == "inprogress" %} Please wait for 15 -30 minutes...  {% endif %}
+        {% if candidate.video_analysis_status == "inprogress" %} Analyzing Please wait... for 15 -30 minutes  {% endif %}
       </td>
     </tr>
     {% endfor %} {% else %}
