--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -452,12 +452,15 @@ for (let i = 0; i < accordion.length; i++) {
                     {% endif %}
 
                     <span>
-                      Candidate's Score(Video) = <span style="color:{{colorval_frame_dur_report}};">{{ video_report.frame_dur_report | emotion_scores|float }}%</span>
+                      Candidate's Score(Video) = <span style="color:{{colorval_frame_dur_report}};">{{video_report.frame_dur_report|emotion_scores|float }}%</span>
                       <br />
-                      Candidate's Score(Text) = <span style="color:{{colorval_frame_dur_report}};">{{video_report.text_dur_report|emotion_scores|float }}%</span>
+                      Candidate's Score(Text) = <span style="color:{{colorval_text_dur_report}};">{{video_report.text_dur_report|emotion_scores|float }}%</span>
                       <br />
-                      Candidate's Score(Audio) = <span style="color:{{colorval_frame_dur_report}};">{{video_report.audio_report|emotion_scores_audio|float }}%</span>
+                      Candidate's Score(Audio) = <span style="color:{{colorval_audio_report}};">{{video_report.audio_report|emotion_scores_audio|float }}%</span>
                     </span>
+
+
+
 
                 </div>
             </div>
@@ -488,21 +491,38 @@ for (let i = 0; i < accordion.length; i++) {
                 <i class="fa fa-video-camera show-video-clip-candidate" style="
               color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip(In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
             data-bs-target="#vclipmodel-cand" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></p>
-              <span>
-                {% if video_report.frame_dur_report|emotion_scores|float > 50 %}
-                  {% set colorval = 'green' %}
-                {% elif video_report.frame_dur_report|emotion_scores > 33 and video_report.frame_dur_report|emotion_scores < 50 %}
-                  {% set colorval = 'orange' %}
-                {% elif video_report.frame_dur_report|emotion_scores < 33 %}
-                  {% set colorval = 'red' %}
-                {% endif %}
-                
-                Candidate's Score(Video) = <span style="color:{{colorval}};">{{video_report.frame_dur_report|emotion_scores }}</span>
+
+                {% if video_report.frame_dur_report|emotion_scores|int >= 50 %}
+                      {% set colorval_frame_dur_report = 'green' %}
+                    {% elif video_report.frame_dur_report|emotion_scores|int > 33 and video_report.frame_dur_report|emotion_scores|int < 50 %}
+                      {% set colorval_frame_dur_report = 'orange' %}
+                    {% elif video_report.frame_dur_report|emotion_scores|int < 33 %}
+                      {% set colorval_frame_dur_report = 'red' %}
+                    {% endif %}
+
+                    {% if video_report.text_dur_report|emotion_scores|int > 50 %}
+                      {% set colorval_text_dur_report = 'green' %}
+                    {% elif video_report.text_dur_report|emotion_scores|int > 33 and video_report.text_dur_report|emotion_scores|int < 50 %}
+                      {% set colorval_text_dur_report = 'orange' %}
+                    {% elif video_report.text_dur_report|emotion_scores|int < 33 %}
+                      {% set colorval_text_dur_report = 'red' %}
+                    {% endif %}
+
+                    {% if video_report.audio_report|emotion_scores|int > 50 %}
+                      {% set colorval_audio_report = 'green' %}
+                    {% elif video_report.audio_report|emotion_scores|int > 33 and video_report.audio_report|emotion_scores|int < 50 %}
+                      {% set colorval_audio_report = 'orange' %}
+                    {% elif video_report.audio_report|emotion_scores|int < 33 %}
+                      {% set colorval_audio_report = 'red' %}
+                    {% endif %}
+
+                <span>
+                Candidate's Score1(Video) = <span style="color:{{colorval_frame_dur_report}};">{{video_report.frame_dur_report|emotion_scores }}</span>
                 <br />
-                Candidate's Score(Text) = {{video_report.text_dur_report|emotion_scores }}
+                Candidate's Score(Text) =  <span style="color:{{colorval_text_dur_report}};">{{video_report.text_dur_report|emotion_scores }}</span>
                 <br />
 
-                Candidate's Score(Audio) = {{video_report.audio_report|emotion_scores_audio }}
+                Candidate's Score(Audio) = <span style="color:{{colorval_audio_report}};">{{video_report.audio_report|emotion_scores_audio }}</span>
               </span>
 
             </div>
