--- a/static/assets/css/details_report.css
+++ b/static/assets/css/details_report.css
@@ -812,3 +812,23 @@ select:focus {
 .accordion-button {
   display: inline !important;
 }
+
+/* Just the UL styling all you need */
+
+ul {
+  list-style: none;
+}
+
+li {
+  line-height: 1.5;
+  text-indent: -30px;
+  padding: 8px 0 8px 30px;
+}
+
+li:before {
+  float: left;
+  display: block;
+  content: '\2605';
+  color: #EA1B3D;
+  margin: 0 30px 0 0;
+}
