--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -60,6 +60,12 @@
     <div>
       <div class="card-body">
           <div class="col-md mb-4 mb-md-0">
+            <div class="accordion mt-3" id="question_answer_accordion">
+              <div class="card accordion-item-sidebar"> 
+              <h3 class="accordion-header" id="">Total Time Duration: {{interviewer_total_time}}</h3>
+            </div>
+            </div>
+
              {% if analysis_data %}
                          {% for key,words in analysis_data %}
                              {% if key == 'Interviewer Analysis' %}
@@ -73,18 +79,17 @@
                       Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
                   </button>
                 </h2>
-            <div id="accordion1" class="accordion-collapse collapse show add-extra-css"
-              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
-              <div class="accordion-body">
-                 {% for weak in words['weak_words'] %}
-                            <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
-                        {% endfor %}
+                <div id="accordion1" class="accordion-collapse collapse show add-extra-css"
+                  data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+                  <div class="accordion-body">
+                    {% for weak in words['weak_words'] %}
+                                <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
+                            {% endfor %}
 
+                    </div>
+                  </div>
               </div>
             </div>
-        </div>
-
-      </div>
 
 
               <div class="accordion mt-3" id="question_answer_accordion">
@@ -126,27 +131,31 @@
                          {% for key,words in analysis_data %}
                             {% if key == 'Candidate Analysis' %}
             <div class="accordion mt-3" id="question_answer_accordion">
-             <div class="card accordion-item-sidebar">
-                <h2 class="accordion-header" id="heading_{{ index }}">
-
-                  <button type="button" class="accordion-button" data-bs-toggle="collapse"
-                    data-bs-target="#accordion3" aria-expanded="false" aria-controls="accordion3">
-                    <i class="fa fa-history" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
-                      Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
-                  </button>
-                </h2>
-            <div id="accordion3" class="accordion-collapse collapse show add-extra-css"
-              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
-              <div class="accordion-body">
-                 {% for weak in words['weak_words'] %}
-                            <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
-                        {% endfor %}
-
+              <div class="card accordion-item-sidebar"> 
+                <h3 class="accordion-header" id="">Total Time Duration: {{candidate_total_time}}</h3>
               </div>
             </div>
-        </div>
+            <div class="accordion mt-3" id="question_answer_accordion">
+              <div class="card accordion-item-sidebar">
+                  <h2 class="accordion-header" id="heading_{{ index }}">
 
-      </div>
+                    <button type="button" class="accordion-button" data-bs-toggle="collapse"
+                      data-bs-target="#accordion3" aria-expanded="false" aria-controls="accordion3">
+                      <i class="fa fa-history" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
+                        Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
+                    </button>
+                  </h2>
+                <div id="accordion3" class="accordion-collapse collapse show add-extra-css"
+                  data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+                  <div class="accordion-body">
+                  {% for weak in words['weak_words'] %}
+                              <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
+                          {% endfor %}
+                  </div>
+                </div>
+              </div>
+
+            </div>
 
 
               <div class="accordion mt-3" id="question_answer_accordion">
@@ -174,7 +183,7 @@
             {% endfor %}
 
  {% endif %}
-    </div>
+          </div>
       </div>
     </div>
 
@@ -366,7 +375,7 @@ for (let i = 0; i < accordion.length; i++) {
                       data-audio-report="{{video_report.audio_report}}"></i>
                       <br>
                       <i class="fa fa-video-camera show-video-clip-interviewer" style="
-                    color: #b90015;font-size: 15px;" aria-hidden="true" title="Interviewer Timestamp clip (In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
+                    color: #b90015;font-size: 15px;" aria-hidden="true" title="Interviewer Timestamp clip (Minutes:Seconds): {{ video_process.start_duration|seconds_to_minutes }}-{{ video_process.end_duration|seconds_to_minutes }}" data-bs-toggle="modal"
                     data-bs-target="#vclipmodel-int" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></p>
 
                     {% if video_report.frame_dur_report|emotion_scores|int >= 50 %}
@@ -406,7 +415,7 @@ for (let i = 0; i < accordion.length; i++) {
                   
                   <!-- <div> -->
                     <!-- <span><i class="fa fa-video-camera show-video-clip-interviewer" style="
-                    color: #b90015;font-size: 15px;" aria-hidden="true" title="Interviewer Timestamp clip (In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
+                    color: #b90015;font-size: 15px;" aria-hidden="true" title="Interviewer Timestamp clip (Minutes:Seconds): {{ video_process.start_duration|seconds_to_minutes }}-{{ video_process.end_duration|seconds_to_minutes }}" data-bs-toggle="modal"
                     data-bs-target="#vclipmodel-int" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></span>
                     <br> -->
 
@@ -414,7 +423,7 @@ for (let i = 0; i < accordion.length; i++) {
                     <=((next_video_process.start_duration|int) + 3) and video_process.speaker=='candidate' and
                     video_process.start_duration !='0' ) %}
                     <!-- <span><i class="fa fa-video-camera show-video-clip-candidate" style="
-                      color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip (In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
+                      color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip (Minutes:Seconds): {{ video_process.start_duration|seconds_to_minutes }}-{{ video_process.end_duration|seconds_to_minutes }}" data-bs-toggle="modal"
                     data-bs-target="#vclipmodel-cand" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></span> --><!-- </div> -->
                     <div class="candidate">
                       <p style="display:flex;flex-direction: column;">
@@ -424,7 +433,7 @@ for (let i = 0; i < accordion.length; i++) {
                       data-audio-report="{{video_report.audio_report}}"></i>
                       <br>
                       <i class="fa fa-video-camera show-video-clip-candidate" style="
-                      color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip (In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
+                      color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip (Minutes:Seconds): {{ video_process.start_duration|seconds_to_minutes }}-{{ video_process.end_duration|seconds_to_minutes }}" data-bs-toggle="modal"
                     data-bs-target="#vclipmodel-cand" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></p>
                     
                     {% if video_report.frame_dur_report|emotion_scores|int >= 50 %}
@@ -489,7 +498,7 @@ for (let i = 0; i < accordion.length; i++) {
                 data-audio-report="{{video_report.audio_report}}"></i>
                 <br>
                 <i class="fa fa-video-camera show-video-clip-candidate" style="
-              color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip(In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
+              color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip(Minutes:Seconds): {{ video_process.start_duration|seconds_to_minutes }}-{{ video_process.end_duration|seconds_to_minutes }}" data-bs-toggle="modal"
             data-bs-target="#vclipmodel-cand" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></p>
 
                 {% if video_report.frame_dur_report|emotion_scores|int >= 50 %}
